--- a/html/page_Symbol.html
+++ b/html/page_Symbol.html
@@ -150,7 +150,7 @@ In case of error the value <b>Unicode(-1)</b> is returned (only in UTF8-compatib
 
 <p>
 <b>CutChar()</b> extracts the next <b>Char</b> symbol from the non-empty text (argument <b>text</b> is updated).
-In case of error the value <b>Unicode(-1)</b> is returned (only in UTF8-compatible mode) and <span class="Alert"><b>text</b> is not updated</span>.
+In case of error the value <b>Unicode(-1)</b> is returned (only in UTF8-compatible mode) and <b>text</b> is moved by 1 character.
 </p>
 
 </body>
