--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
    <li><a href="html/page_ToMemBase.html">ToMemBase</a></li> -----
    <li><a href="html/page_FileName.html">FileName</a></li>
    <li><a href="html/page_FileNameMatch.html">FileNameMatch</a></li>
+   <li><a href="html/page_StrToChar.html">StrToChar</li>
    <li>Async Files
     <ol>
      <li><a href="html/page_AsyncFiles.html">Interface</a></li>
