--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
    <li><a href="html/page_DestroyGuard.html">DestroyGuard</a></li>
    <li><a href="html/page_RangeDel.html">RangeDel</a></li>
    <li><a href="html/page_Pow.html">Pow</a></li>
-   <li><a href="html/page_PrintRatio.html">PrintRatio</a> <span class="Alert">TBD</span> </li>
+   <li><a href="html/page_PrintRatio.html">PrintRatio</a></li>
   </ol>
  </li>
 
