--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
    <li><a href="html/page_Printing.html">Printing</a></li>
    <li><a href="html/page_Scanning.html">Scanning</a></li>
    <li><a href="html/page_Exceptions.html">Exceptions</a></li>
-   <li><a href="html/page_Scope.html">Scope</a> <span class="Alert">TBD</span> </li>
+   <li><a href="html/page_Scope.html">Scope</a></li>
    <li><a href="html/page_MemoryManagement.html">Memory management</a>
     <ol>
      <li><a href="html/page_RadixHeap.html">RadixHeap</a></li>
