--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
    <li><a href="html/page_StrKey.html">StrKey</a></li> 
    <li><a href="html/page_Utf8.html">Utf8</a></li> 
    <li><a href="html/page_Symbol.html">Symbol</a></li>
-   <li><a href="html/page_SymCount.html">SymCount</a></li> -----
+   <li><a href="html/page_SymCount.html">SymCount</a></li> 
+   <li><a href="html/page_FeedBuf.html">FeedBuf</a></li>   -----
    <li><a href="html/page_PrintStem.html">PrintStem</a></li>
    <li><a href="html/page_CapString.html">CapString</a></li>
    <li><a href="html/page_MakeString.html">MakeString</a></li>
