--- a/vtools/BookLab/Convertor/index.html
+++ b/vtools/BookLab/Convertor/index.html
@@ -2,7 +2,7 @@
 
 <h2>Introduction</h2>
 
-<img src="html/Mandelbrot.png">
+<img src="img/Mandelbrot.png">
 
 <p>
 <b>Mandelbrot scope</b> (MScope.exe) is a software to display the Mandelbrot Set. The Mandelbrot Set is a famous mathematical fractal set,
@@ -31,7 +31,7 @@ The second submenu opens the dialog to edit preferences, specific to the applica
 The submenu <i>Colors</i> opens the dialog, used to change the color palette and the depth of the calculation.
 </p>
 
-<img src="html/Colors.png">
+<img src="img/Colors.png">
 
 <p>
 There are several configuration options on this dialog.
