--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
    <li><a href="html/page_ToMemBase.html">ToMemBase</a></li> -----
    <li><a href="html/page_FileName.html">FileName</a></li>
    <li><a href="html/page_FileNameMatch.html">FileNameMatch</a></li>
-   <li><a href="html/page_StrToChar.html">StrToChar</li>
+   <li><a href="html/page_StrToChar.html">StrToChar</a></li>
+
    <li>Async Files
     <ol>
      <li><a href="html/page_AsyncFiles.html">Interface</a></li>
@@ -218,6 +219,7 @@
      <li><a href="html/page_AsyncBinaryFile.html">Binary</a></li>
     </ol>
    </li>
+
    <li><a href="html/page_ELF.html">ELF format parser</a></li>
    <li><a href="html/page_LangDataMap.html">LangDataMap</a></li>
   </ol>
@@ -282,6 +284,7 @@
 
  <li>HCore files and file system
   <ol>
+   <li><a href="html/page_RawFileToRead.html">RawFileToRead</a></li>
    <li><a href="html/page_FileToMem.html">FileToMem</a></li>
    <li><a href="html/page_AsyncFileDevice.html">AsyncFileDevice</li>
    <li><a href="html/page_FileSystem.html">FileSystem</a></li>
@@ -294,6 +297,7 @@
  <li>XCore files
   <ol>
    <li><a href="html/page_DefaultFileDevice.html">DefaultFileDevice</a></li>
+   <li><a href="html/page_XCore_RawFileToRead.html">RawFileToRead</a></li>
    <li><a href="html/page_XCore_FileToMem.html">FileToMem</a></li>
    <li><a href="html/page_XCore_BinaryFile.html">Binary</a></li>
   </ol>
