--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
    <li><a href="html/page_RangeDel.html">RangeDel</a></li>
    <li><a href="html/page_Pow.html">Pow</a></li>
    <li><a href="html/page_PrintRatio.html">PrintRatio</a></li>
+   <li><a href="html/page_ErrorText.html">ErrorText</a></li>
   </ol>
  </li>
 
