--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
 
    <li><a href="html/page_ELF.html">ELF format parser</a></li>
    <li><a href="html/page_LangDataMap.html">LangDataMap</a></li>
+   <li><a href="html/page_PretextFileToMem.html">PretextFileToMem</a></li>
   </ol>
  </li>
 
