--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
  <li>HCore files and file system
   <ol>
-   <li><a href="html/page_RawFileToRead.html">RawFileToRead</a></li>
+   <li><a href="html/page_RawFileToRead.html">RawFileToRead and AltFileToRead</a></li>
    <li><a href="html/page_FileToMem.html">FileToMem</a></li>
    <li><a href="html/page_AsyncFileDevice.html">AsyncFileDevice</li>
    <li><a href="html/page_FileSystem.html">FileSystem</a></li>
