--- a/html/page_RawFileToRead.html
+++ b/html/page_RawFileToRead.html
@@ -85,7 +85,7 @@ Methods throw exceptions in case of errors.
 <b>read_all()</b> reads the file from the current position. The whole buffer must be read for success. 
 </p>
 
-<h4>AltFileToRead</h4>
+<a name="AltFileToRead"><h4>AltFileToRead</h4></a>
 
 <p>
 <b>AltFileToRead</b> is simalar to the <b>RawFileToRead</b>, but uses the alternative read operation.
