--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
    <li><a href="html/page_MultiSignal.html">MultiSignals</a></li>
    <li><a href="html/page_ObjectDomain.html">Object Domain</a></li>
    <li><a href="html/page_StepEval.html">StepEval</a></li>
+   <li><a href="html/page_Volume.html">Volume</a></li>
   </ol>
  </li>
 
