--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
    <li><a href="html/page_Regen.html">Regen</a></li>
    <li><a href="html/page_PTPSecureServer.html">PTPSecureServer</a></li>
    <li><a href="html/page_PTPSecureClient.html">PTPSecureClient</a></li>
+   <li><a href="html/page_UtilVolume.html">Volume</a></li>
   </ol>
  </li>
 
