--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
    <li><a href="html/page_ELF.html">ELF format parser</a></li>
    <li><a href="html/page_LangDataMap.html">LangDataMap</a></li>
    <li><a href="html/page_PretextFileToMem.html">PretextFileToMem</a></li>
+   <li><a href="html/page_Deflate.html">Deflate</a></li>
   </ol>
  </li>
 
@@ -292,7 +293,8 @@
    <li><a href="html/page_AsyncFileDevice.html">AsyncFileDevice</li>
    <li><a href="html/page_FileSystem.html">FileSystem</a></li>
    <li><a href="html/page_DirTreeRun.html">DirTreeRun</a></li>
-   <li><a href="html/page_BinaryFile.html">Binary</a></li>
+   <li><a href="html/page_BinaryFile.html">BinaryFile</a></li>
+   <li><a href="html/page_DecodeFile.html">DecodeFile</a></li>
    <li><a href="html/page_LaunchPath.html">LaunchPath</a></li>
   </ol>
  </li>
@@ -459,6 +461,22 @@
    <li><a href="html/page_PTPSecureServer.html">PTPSecureServer</a></li>
    <li><a href="html/page_PTPSecureClient.html">PTPSecureClient</a></li>
    <li><a href="html/page_UtilVolume.html">Volume</a></li>
+  </ol>
+ </li>
+
+ <li>Video tools
+  <ol>
+   <li>Aspect</li>
+   <li>Bitmap</li>
+   <li>BookLab</li>
+   <li>ContourLab</li>
+   <li>DDLDisplay</li>
+   <li>EventId</li>
+   <li>RandomId</li>
+   <li>Sample</li>
+   <li>SubLab</li>
+   <li>UserPreference</li>
+   <li>Zipmap</li>
   </ol>
  </li>
 
