--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@
    <li><a href="html/page_PTPSecureServer.html">PTPSecureServer</a></li>
    <li><a href="html/page_PTPSecureClient.html">PTPSecureClient</a></li>
    <li><a href="html/page_UtilVolume.html">Volume</a></li>
+   <li><a href="html/page_tool_MakeString.html">MakeString</a></li>
   </ol>
  </li>
 
